--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <p class="header__logo-text">самая вкусная пицца во вселенной</p>
                     </div>
                 </div>
-                <button class="header__btn"><pre>  520 ₽  |  <i class="fa-solid fa-cart-shopping"></i>   3  </pre></button>
+                <a href="cart.html"><button class="header__btn"><pre>  520 ₽  |  <i class="fa-solid fa-cart-shopping"></i>   3  </pre></button></a>
             </header>
             <nav class="nav">
                 <div class="filter">
